--- a/trunk/tpl/login_short.htm
+++ b/trunk/tpl/login_short.htm
@@ -5,7 +5,7 @@
 	  <input type="text" name="usr" placeholder="e-mail" style="email"><br>
 	  <!--err:usr-->
 	  <input type="password" name="pwd" placeholder="пароль"><br>
-	  <input type="submit" value="вход" class="submit">
+   	<button class="submit">Вход</button>
 	  <a class="gray remind_do" href="#">Я забыл пароль</a>
 	  <a class="gray reg_do" href="#">Создать новый аккаунт</a>
 	</form>
