--- a/trunk/tpl/point_comm_list.htm
+++ b/trunk/tpl/point_comm_list.htm
@@ -10,7 +10,7 @@
 	</div>
 	
 [line]
-	<div class="item">
+	<div class="item" id="point_{p_id}">
 	  <div class="point">
 		  <div class="ill">
 		  	<img src="{p_img}">
