--- a/trunk/tpl/search_result.htm
+++ b/trunk/tpl/search_result.htm
@@ -53,5 +53,4 @@
 [p_comms]
   <span class="comms"><i></i>{p_comms}</span>
 [empty]
-	Ничего не найдено... <br>
-	Проверте - правильно ли вы указали название заведения?
+	<h2 class="nothing">Мы не нашли ничего по вашему запросу&nbsp;&mdash; странно...</h2>
