--- a/trunk/tpl/point.htm
+++ b/trunk/tpl/point.htm
@@ -64,6 +64,18 @@
 		  <i id="prm_loginza_token">{function:loginza_token_url}</i>
 		</div>
 		<div id="prm_tpl"></div>
+		<div id="ans_tpl">
+		  <form class="ans_form">
+	      <input type="hidden" name="parent" value="" class="parent_fld">
+	      <input type="hidden" name="com_id" value="" class="com_id_fld">
+	      <textarea name="reveiw" class="reveiw"></textarea>
+	      <div class="foot">
+	        <input type="submit" onclick="send_answer( this.form ); return false;" class="submit" value="Опубликовать">
+	        <a href="#" onclick="$('.relator').html(''); return false;">Отменить</a>
+	        <div class="clear"></div>
+	      </div>
+	    </form>
+		</div>
 	</div>
 [auth]
 [not_auth]
@@ -130,62 +142,80 @@
 		{body}
 	</div>
 [comm_line]
-  <div class="comment" >
+  <div class="comment" rel="{com_id}">
+    <span class="arr"><span></span></span>
     <div class="bullet">
     	<img src="{u_img}">
     </div>
 		<div class="user">
 			<span class="name">{u_name}</span>
 			{com_weight}
+			<span class="date">{com_date}</span>
+			
 		  <span class="duration">на сайте <span class="from">{u_createdate}</span>.</span>
-			<!--<a href="">Подписаться на отзывы участника</a>-->
+			<a href="#" class="subscribe">Подписаться на отзывы участника</a>
 		</div>
 		
-		<div class="text">
-		  <span class="date">{com_date}</span>
-		  <br>
-		  {com_text}
+		<div class="text">{com_text}</div>
+		<div class="foot">
+		  {ans_button}
+		  <a href="#" class="fnc alarm" onclick="return comm_alarm(this);">Пожаловаться</a>
+		  {owner_func}
+		  <a href="#" class="likes likes_{com_cachelikes}"><i></i>{com_cachelikes}</a>
 		</div>
-		<div class="bullet wide">
-		  <span class="likes likes_{com_cachelikes}"><i></i>{com_cachelikes}</span>
-		</div>
+		{answer_{com_id}}
   </div>
+[ans_button]
+  <a href="#" class="fnc answer" onclick="return comm_ans(this);">Ответить</a>
+[comm_owner_func]
+			<a href="#" class="fnc edit" onclick="return  comm_edit(this); ">Редактировать</a>
+		  <a href="#" class="fnc delete" onclick="return comm_del(this);">Удалить</a>
 [comm_line_fs]
-  <div class="comment foursquare">
+  <div class="comment foursquare forign" rel="{id}">
     <div class="bullet">
     	<img src="{user_photo}">
-    	<img src="/img/fs_logo_tiny.jpg" title="из foursquare" class="fs_label">
+    	
     </div>
 		<div class="user">
 			<span class="name">{user_name}</span>
-			<!--<a href="">Подписаться на отзывы участника</a>-->
+			<span class="date">{create}</span>
+			коментарий из <img src="/img/fs_logo_tiny.jpg" title="из foursquare" class="fs_label">
+			
 		</div>
 		<div class="text">
-		  <span class="date">{create}</span>
-		  <br>
 		  {text}
 		</div>
+		<div class="foot">
+		  <a href="#" class="fnc" onclick="return comm_ans(this);">Ответить</a>
+		</div>
+		{answer_{id}}
   </div>
 [comm_line_google]
-  <div class="comment foursquare">
+  <div class="comment google forign" rel="{id}">
     <div class="bullet">
       <img src="{user_photo}">
-    	<img src="/img/ga_logo_tiny.jpg" title="из google адресов" class="ga_label">
     </div>
 		<div class="user">
 			<span class="name">{user_name}</span>
+			<span class="date">{create}</span>
+			коментарий из <img src="/img/ga_logo_tiny.jpg" title="из google адресов" class="ga_label">
 		</div>
 		<div class="text">
-		  <span class="date">{create}</span>
-		  <br>
 		  {text}
 		</div>
+		<div class="foot">
+		  <a href="#" class="fnc" onclick="return comm_ans(this);">Ответить</a>
+		</div>
+		{answer_{id}}
   </div>
 [comm_weight_plus]
 <span class="recommend">рекомендует</span>
 [comm_weight_minus]
 <span class="not_recommend">не рекомендует</span>
-
+[comm_answer_body]
+	<div class="answers">
+	  {body}
+	</div>
 [statistic]
 	<div class="stat_block">
 		<div class="arrow stat_arr">
