--- a/trunk/tpl/ajax_output.htm
+++ b/trunk/tpl/ajax_output.htm
@@ -61,6 +61,17 @@
 	</p>
 [profile_store_success]
 	Данные успешно сохранены.
+	  <div id="changed_profile" style="display:none;">
+  		<i class="uinf_id">{u_id}</i>
+	    <i class="uinf_grp">{u_grp}</i>
+	    <i class="uinf_email">{u_email}</i>
+	    <i class="uinf_name">{u_name}</i>
+	    <i class="uinf_sname">{u_sname}</i>
+	    <i class="uinf_gender">{u_gender}</i>
+	    <i class="uinf_bdate">{u_bdate_format}</i>
+	    <i class="uinf_geo">{u_geo}</i>
+	    <i class="uinf_img">{u_img_path}</i>
+	  </div>
 [profile_store_fail]
 	Ошибка сохранения.
 [interest_category]
