--- a/trunk/tpl/point_user_subscribed.htm
+++ b/trunk/tpl/point_user_subscribed.htm
@@ -1,6 +1,6 @@
 [body]
 	<div class="list_title">
-			{title}
+		{title}
 	</div>
 	<div class="point_list">
 	  {body}
@@ -32,8 +32,6 @@
 	    <div class="clear"></div>
 	  </div>
 	</div>
-[title_def]
-	Свежие отзывы о заведениях из сферы ваших интересов:
 [com_short]
 	  <div class="comm">
 	    <a href="/users/{u_url}">
@@ -71,3 +69,7 @@
 	      <a href="#" class="plus" >Рекомендую</a>
 	      <a href="#" class="minus">Не рекомендую</a>
 	    </div>
+[title_users]
+  Свежие отзывы от людей на которых вы оформили подписку:
+[title_points]
+  Свежие отзывы о заведениях, на которые вы оформили подписку:
