--- a/trunk/tpl/user_info.htm
+++ b/trunk/tpl/user_info.htm
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div style="display:none;">
-	  <div id="user_info">
+	  <div id="user_inf">
 	    <i class="uinf_id">{u_id}</i>
 	    <i class="uinf_grp">{u_grp}</i>
 	    <i class="uinf_email">{u_email}</i>
