--- a/trunk/tpl/ajax_output.htm
+++ b/trunk/tpl/ajax_output.htm
@@ -74,12 +74,40 @@
 	  </div>
 [profile_store_fail]
 	Ошибка сохранения.
+[interest_category_wrapper]
+	<div>
+	  <h3>Ваши интересы</h3>
+		{body}
+	</div>
 [interest_category]
 	<div class="check_block" title="{t_name}">
 	  <input type="checkbox" name="themes[{t_id}]" value="{t_id}" {checked}>
 	  <img src="{t_img}" alt="{t_name}">
 	  <div>{t_name}</div>
 	</div>
+[interest_users_wrapper]
+	<div>
+	  <h3>Люди, на отзывы которых Вы подписаны</h3>
+		{body}
+	</div>
+[interest_users]
+	<div class="check_block" title="{u_name}">
+	  <input type="checkbox" name="users[{u_id}]" value="{u_id}" {checked}>
+	  <img src="{u_img}" alt="{u_name}">
+	  <div>{u_name}</div>
+	</div>
+[interest_points_wrapper]
+	<div>
+	  <h3>Места, на отзывы о которых Вы подписаны</h3>
+		{body}
+	</div>
+[interest_points]
+	<div class="check_block" title="{p_name} {p_addr}">
+	  <input type="checkbox" name="points[{p_id}]" value="{p_id}" {checked}>
+	  <img src="{p_img}" alt="{p_name}">
+	  <div>{p_name} {p_addr}</div>
+	</div>
+
 [send_interest_success]
 	<p>
 		<strong>Данные сохранены</strong>
