--- a/trunk/tpl/user_info.htm
+++ b/trunk/tpl/user_info.htm
@@ -109,10 +109,16 @@
 			</div>
 		</div>
 		<div id="interest_form_tpl">
-		  <div class="interest_dialog" style="margin: 0 auto; position: relative; width: 60%;">
+		  <div class="interest_dialog" >
 				<a href="#" class="close" onClick="interest_dialog(); return false;">Закрыть интересы</a>
 		    <form class="interest_form" enctype="multipart/form-data" method="POST">
         	<div class="catigiries">
+        	  <img src="/img/loading-line.gif" style="margin:40px 0 0 40%; height:17px;" >
+					</div>
+					<div class="users">
+        	  <img src="/img/loading-line.gif" style="margin:40px 0 0 40%; height:17px;" >
+					</div>
+					<div class="points">
         	  <img src="/img/loading-line.gif" style="margin:40px 0 0 40%; height:17px;" >
 					</div>
         	<div style="margin-top:10px; padding:10px 0 0 5px; border-top:1px solid #e4e4e4;">
